--- a/CalculatorApp/CalculatorApp.csproj
+++ b/CalculatorApp/CalculatorApp.csproj
@@ -52,7 +52,7 @@
     <Compile Include="CalcForm.Designer.cs">
       <DependentUpon>CalcForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="CalculatorEngin.cs" />
+    <Compile Include="CalculatorEngine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CalcForm.resx">
